# mclaw

./: .gitignore  Agent协商改进说明.md  ModWeaver 项目文档.md  ModWeaver（织模者）产品报告 v1.1.md  ModWeaver（织模者）产品报告 v2.md  ModWeaver（织模者）产品需求文档 V2.5.md  README.md  docker-compose.yml  mclaw 项目文档.md  pyproject.toml  架构报告 v1.md
docker/: README.md
openspec/changes/archive/2026-05-24-cli-interactive-menu/: design.md  proposal.md
openspec/changes/archive/2026-05-24-cli-interactive-menu/specs/cli-interactive/: spec.md
openspec/changes/archive/2026-05-24-keyboard-navigation/: design.md
openspec/changes/archive/2026-05-24-keyboard-navigation/specs/cli-interactive/: spec.md
openspec/changes/archive/2026-05-24-mclaw-mac-platform/: design.md  proposal.md
openspec/changes/archive/2026-05-24-typer-cli-migration/: proposal.md
openspec/changes/cli-interactive-menu/: tasks.md
openspec/changes/keyboard-navigation/: proposal.md  tasks.md
openspec/changes/mclaw-mac-platform/: tasks.md
openspec/changes/mclaw-mac-platform/specs/memory-system/: spec.md
openspec/changes/typer-cli-migration/: design.md  tasks.md
src/mclaw/agents/: diagnoser.py  executor.py  graph.py  planner.py  state.py
src/mclaw/cli/: diagnose_cmd.py  main.py  menu.py  monitor.py  plan_cmd.py  solve_cmd.py
src/mclaw/llm/: config.py  provider.py  retry.py
src/mclaw/mc_platform/: compatibility.py  crash_parser.py  mod_cache.py  mod_query.py
src/mclaw/memory/: embedder.py  retriever.py  store.py
src/mclaw/prompts/: crash_diagnosis.py
tests/: test_llm.py  test_mc_platform.py  test_menu.py  test_stage0.py
tests/fixtures/crash_logs/: dependency_missing_create.txt  dependency_missing_jei.txt  dependency_missing_kotlin.txt  ecosystem_fabric_on_forge.txt  ecosystem_forge_on_fabric.txt  version_conflict_minecraft.txt  version_conflict_optifine.txt  version_conflict_sodium.txt
(+4 files in other folders)
