[project]
name = "mclaw"
version = "0.1.0"
description = "Agent technology learning project using Minecraft modpack building as practice domain"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "pandas>=2.0.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "poethepoet>=0.30.0",
]

[project.scripts]
mclaw = "mclaw.cli.main:app"

[tool.poe.tasks]
test = "pytest -v"
infra-up = "docker compose up -d"
infra-down = "docker compose down"
test-watch = "pytest -v --tb=short -q"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/mclaw"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
